--- a/B3/stylesheets/layout.css
+++ b/B3/stylesheets/layout.css
@@ -20,6 +20,10 @@
 /* #Page Styles
 ================================================== */
 
+#dragonImg img {
+	max-width: 100%;
+}
+
 /* #Media Queries
 ================================================== */
 
